# Soter

./: .gitignore  package-lock.json  pnpm-lock.yaml
.github/workflows/: contract-ci.yml
app/backend/: .env.example  ERROR_HANDLING.md  README.md  eslint.config.mjs  package-lock.json  package.json  test-errors.sh  tsconfig.json
app/backend/.husky/: pre-commit
app/backend/prisma/: schema.prisma  seed.ts
app/backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
app/backend/src/aid/: aid.controller.ts  aid.module.ts  aid.service.ts
app/backend/src/audit/: audit.controller.spec.ts  audit.controller.ts  audit.service.spec.ts  audit.service.ts
app/backend/src/auth/: roles.guard.spec.ts  roles.guard.ts
app/backend/src/campaigns/: campaigns.controller.ts  campaigns.service.spec.ts  campaigns.service.ts
app/backend/src/test-error/: test-error.controller.ts  test-error.module.ts
app/backend/test/: app.e2e-spec.ts  campaigns.e2e-spec.ts  error-handling.e2e-spec.ts  security.e2e-spec.ts
app/frontend/: package-lock.json  package.json
app/onchain/: README.md
app/onchain/contracts/aid_escrow/: Cargo.toml
app/onchain/contracts/aid_escrow/src/: lib.rs
app/onchain/contracts/aid_escrow/test_snapshots/: test_error_cases.1.json  test_integration_flow.1.json  test_multiple_packages.1.json
app/onchain/contracts/aid_escrow/test_snapshots/test/: test_claim_package.1.json  test_claim_package_not_recipient.1.json  test_get_package_count.1.json  test_initialize_and_get_admin.1.json
app/onchain/contracts/aid_escrow/tests/: core_flow.rs  integration.rs
(+17 files in other folders)
